# SAGE

./: Cargo.toml  LICENSE  README.md  database.sql  gl-sast-report.json
src/: command_line_reader.rs  database_connector.rs  file_reader.rs  json_parser.rs  main.rs  pretty_table.rs  vulnerability.rs
