[package]
name = "SAGE"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rusqlite = { version = "0.32.1", features = ["bundled"] }
comfy-table = { git = "https://github.com/Nukesor/comfy-table.git", tag = "v7.1.3" }